--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular-animate": "^1.6.4",
     "angular-sanitize": "^1.6.4",
     "angular-route": "^1.6.4",
+    "angular-ui-router": "^1.0.5",
     "angular-cookies": "^1.6.4",
     "angular-material": "^1.1.4",
     "angular-material-data-table": "^0.10.10",
