--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,6 @@
     "angular-messages": "^1.6.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
-    "lodash": "^4.17.4",
-    "angular-ivh-treeview": "^1.0.6"
+    "lodash": "^4.17.4"
   }
 }
