--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,8 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
-    "angular-ivh-treeview": "^1.0.6"
+    "angular-ivh-treeview": "^1.0.6",
+    "angular-breadcrumb": "^0.5.0",
+    "materialize": "^0.99.0"
   }
 }
