--- a/bower.json
+++ b/bower.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.4",
     "angular-ivh-treeview": "^1.0.6",
     "angular-breadcrumb": "^0.5.0",
-    "materialize": "^0.99.0"
+    "materialize": "^0.99.0",
+    "d3": "^4.10.0"
   }
 }
