--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,7 @@
     "angular-ivh-treeview": "^1.0.6",
     "angular-breadcrumb": "^0.5.0",
     "materialize": "^0.99.0",
-    "d3": "^4.10.0",
-    "material-angular-paging": "*"
+    "material-angular-paging": "*",
+    "d3": "v3.4.13"
   }
 }
