--- a/bower.json
+++ b/bower.json
@@ -37,6 +37,9 @@
     "angular-breadcrumb": "^0.5.0",
     "materialize": "^0.99.0",
     "material-angular-paging": "*",
-    "d3": "v3.4.13"
+    "d3": "v3.4.13",
+    "angular-material-persian-datepicker": "^1.1.3",
+    "moment": "^2.18.1",
+    "moment-jalaali": "^0.7.0"
   }
 }
